--- a/src/app/components/parts/alert-mapping-already-exists/alert-mapping-already-exists.component.html
+++ b/src/app/components/parts/alert-mapping-already-exists/alert-mapping-already-exists.component.html
@@ -95,16 +95,16 @@
          role="alert">
       <h5>
         <button
-          [routerLink]="['', { outlets: {primary: ['edit', 'np' + mapIndex ]} }]"
+          [routerLink]="['', { outlets: {primary: ['mapping', 'np' + mapIndex ]} }]"
           class="btn btn-sm btn-outline-secondary mr-4 float-left" data-toggle="tooltip"
-          ngbTooltip="{{'MAIN_MAPPINGS_NEW_TT_EDIT_INSTEAD' | translate}}"
+          ngbTooltip="{{'MAIN_MAPPINGS_NEW_TT_INSPECT_INSTEAD' | translate}}"
           placement="right"
           type="button">
           <fa-icon [icon]="faRoute"></fa-icon>
         </button>
         {{'MAIN_MAPPINGS_NEW_ALREADY_EXISTS' | translate}}
       </h5>
-      <p>{{'MAIN_MAPPINGS_NEW_EDIT_INSTEAD' | translate}}</p>
+      <p>{{'MAIN_MAPPINGS_NEW_INSPECT_INSTEAD' | translate}}</p>
     </div>
   </span>
 </span>
@@ -117,16 +117,16 @@
          role="alert">
       <h5>
         <button
-          [routerLink]="['', { outlets: {primary: ['edit', 'ep' + mapIndex ]} }]"
+          [routerLink]="['', { outlets: {primary: ['mapping', 'ep' + mapIndex ]} }]"
           class="btn btn-sm btn-outline-secondary mr-4 float-left" data-toggle="tooltip"
-          ngbTooltip="{{'MAIN_MAPPINGS_NEW_TT_EDIT_INSTEAD' | translate}}"
+          ngbTooltip="{{'MAIN_MAPPINGS_NEW_TT_INSPECT_INSTEAD' | translate}}"
           placement="right"
           type="button">
           <fa-icon [icon]="faRoute"></fa-icon>
         </button>
         {{'MAIN_MAPPINGS_NEW_ALREADY_EXISTS' | translate}}
       </h5>
-      <p>{{'MAIN_MAPPINGS_NEW_EDIT_INSTEAD' | translate}}</p>
+      <p>{{'MAIN_MAPPINGS_NEW_INSPECT_INSTEAD' | translate}}</p>
     </div>
   </span>
 </span>
