--- a/src/app/components/parts/alert-mapping-already-exists/alert-mapping-already-exists.component.html
+++ b/src/app/components/parts/alert-mapping-already-exists/alert-mapping-already-exists.component.html
@@ -91,11 +91,11 @@
 <span *ngIf="typeHint.np">
   <span *ngFor="let nodeMap of dataService.selectedNetwork.mappings.nodesPassthrough; let mapIndex = index;">
     <div *ngIf="nodeMap.styleProperty === styleProperty"
-         class="alert alert-danger"
+         class="alert alert-info"
          role="alert">
       <h5>
         <button
-          [routerLink]="['', { outlets: {primary: ['mapping', 'np' + mapIndex ]} }]"
+          [routerLink]="['', { outlets: {primary: ['mappings', 'np' + mapIndex ]} }]"
           class="btn btn-sm btn-outline-secondary mr-4 float-left" data-toggle="tooltip"
           ngbTooltip="{{'MAIN_MAPPINGS_NEW_TT_INSPECT_INSTEAD' | translate}}"
           placement="right"
@@ -113,11 +113,11 @@
 <span *ngIf="typeHint.ep">
   <span *ngFor="let edgeMap of dataService.selectedNetwork.mappings.edgesPassthrough; let mapIndex = index;">
     <div *ngIf="edgeMap.styleProperty === styleProperty"
-         class="alert alert-danger"
+         class="alert alert-info"
          role="alert">
       <h5>
         <button
-          [routerLink]="['', { outlets: {primary: ['mapping', 'ep' + mapIndex ]} }]"
+          [routerLink]="['', { outlets: {primary: ['mappings', 'ep' + mapIndex ]} }]"
           class="btn btn-sm btn-outline-secondary mr-4 float-left" data-toggle="tooltip"
           ngbTooltip="{{'MAIN_MAPPINGS_NEW_TT_INSPECT_INSTEAD' | translate}}"
           placement="right"
