--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
   <div class="row">
 
     <!-- Main outlet -->
-    <div [ngClass]="(layoutIsMainLeft ? 'scroll order-1 p-2 w-' + widthLeft : 'scroll order-3 p-2 w-' + widthRight)">
+    <div class="w-{{layoutService.layout.main.width}} scroll p-2" [ngClass]="(layoutService.layout.main.position === 'left' ? 'order-1' : 'order-3')">
       <router-outlet></router-outlet>
     </div>
 
@@ -11,16 +11,16 @@
     <div class="order-2 w-5">
       <div class="drag-bar">
         <div class="btn-group-vertical">
-          <button class="btn btn-sm btn-secondary btnLayout" (click)="increaseWidthRight()">
+          <button class="btn btn-sm btn-secondary btnLayout" (click)="layoutService.increaseLayoutRight()">
             <fa-icon [icon]="faArrowLeft"></fa-icon>
           </button>
-          <button class="btn btn-sm btn-secondary btnLayout" (click)="increaseWidthLeft()">
+          <button class="btn btn-sm btn-secondary btnLayout" (click)="layoutService.increaseLayoutLeft()">
             <fa-icon [icon]="faArrowRight"></fa-icon>
           </button>
-          <button class="btn btn-sm btn-secondary btnLayout" (click)="resetWidth()">
+          <button class="btn btn-sm btn-secondary btnLayout" (click)="layoutService.resetLayout()">
             <fa-icon [icon]="faRedo"></fa-icon>
           </button>
-          <button class="btn btn-sm btn-warning btnLayout" (click)="flipLayout()"
+          <button class="btn btn-sm btn-warning btnLayout" (click)="layoutService.flipLayout()"
                   role="button">
             <fa-icon [icon]="faExchangeAlt"></fa-icon>
           </button>
@@ -29,7 +29,7 @@
     </div>
 
     <!-- Sidebar outlet -->
-    <div [ngClass]="(layoutIsMainLeft ? 'scroll order-3 w-' + widthRight : 'scroll order-1 w-' + widthLeft)">
+    <div class="w-{{layoutService.layout.sidebar.width}} scroll" [ngClass]="(layoutService.layout.sidebar.position === 'right' ? 'order-3' : 'order-1')">
 
       <ul class="nav nav-tabs mt-2">
         <li class="nav-item">
