[WIP] testing main info component

--- a/src/app/components/main-info/main-info.component.html
+++ b/src/app/components/main-info/main-info.component.html
@@ -1,5 +1,5 @@
 <h1>
-  {{'MAIN_INFO_TITLE' | translate}}
+  <span id="mainInfoTitle">{{'MAIN_INFO_TITLE' | translate}}</span>
   <img [ngStyle]="{'width.px': 75}" class="float-right mt-2" src="assets/img/ndexedit_logo.png">
 </h1>
 
@@ -53,7 +53,7 @@
 <p>
   <fa-icon [icon]="faComments" [size]="'lg'" class="mr-3"></fa-icon>
   {{'SIDEBAR_COMPARE_ABOUT_3_1' | translate}}
-  <a href="mailto:florian.auer@informatik.uni-augsburg.de" target="_blank"><b>Florian Auer</b></a>
+  <a id="mailto" href="mailto:florian.auer@informatik.uni-augsburg.de" target="_blank"><b>Florian Auer</b></a>
   {{'SIDEBAR_COMPARE_ABOUT_3_2' | translate}}
 </p>
 
