[DONE] export network as png or jpeg, no svg function natively possible. Also removed cosmetic navbar within sidebar, because it was misleading

--- a/src/app/components/parts/main-mappings-new-form/main-mappings-new-form.component.html
+++ b/src/app/components/parts/main-mappings-new-form/main-mappings-new-form.component.html
@@ -158,7 +158,7 @@
     <div class="col-2 form-check">
       <input (click)="toggleNeedsColorValidation(!needsColorValidation(styleProperty))"
              [disabled]="isEdit"
-             [checked]="needsColorValidation(styleProperty)" class="form-check-input"
+             [checked]="needsColorValidation(styleProperty)" class="form-check-input position-static"
              id="{{mapType}}ColorValidation"
              type="checkbox">
       <label class="form-check-label" for="{{mapType}}ColorValidation">
